// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/no-implicit-close.md inline validation: adjacent 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "Element <p> is implicitly closed by adjacent <div>",
        "offset": 1,
        "ruleId": "no-implicit-close",
        "selector": "p",
        "severity": 2,
        "size": 1,
      },
    ],
    "source": "<p>
    <div>lorem ipsum</div>
</p>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/no-implicit-close.md inline validation: correct-list 1`] = `Array []`;

exports[`docs/rules/no-implicit-close.md inline validation: correct-paragraph 1`] = `Array []`;

exports[`docs/rules/no-implicit-close.md inline validation: parent 1`] = `
Array [
  Object {
    "errorCount": 3,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 6,
        "context": undefined,
        "line": 2,
        "message": "Element <li> is implicitly closed by sibling",
        "offset": 10,
        "ruleId": "no-implicit-close",
        "selector": "ul > li:nth-child(1)",
        "severity": 2,
        "size": 2,
      },
      Object {
        "column": 6,
        "context": undefined,
        "line": 3,
        "message": "Element <li> is implicitly closed by sibling",
        "offset": 22,
        "ruleId": "no-implicit-close",
        "selector": "ul > li:nth-child(2)",
        "severity": 2,
        "size": 2,
      },
      Object {
        "column": 6,
        "context": undefined,
        "line": 4,
        "message": "Element <li> is implicitly closed by parent </ul>",
        "offset": 34,
        "ruleId": "no-implicit-close",
        "selector": "ul > li:nth-child(3)",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<ul>
    <li>foo
    <li>bar
    <li>baz
</ul>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/no-implicit-close.md inline validation: siblings 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "Element <p> is implicitly closed by sibling",
        "offset": 1,
        "ruleId": "no-implicit-close",
        "selector": "p:nth-child(1)",
        "severity": 2,
        "size": 1,
      },
    ],
    "source": "<p>lorem ipsum
<p>dolor sit amet",
    "warningCount": 0,
  },
]
`;
